Pre-final version

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,13 @@
     year = {2014}
 }
 
+@article{AbakumovYassievich1997,
+  title={Безызлучательная рекомбинация в полупроводниках},
+  author={Абакумов, ВН and Перель, ВИ and Яссиевич, ИН},
+  journal={Изд-во ПИЯФ, СПб},
+  year={1997}
+}
+
 @article{AugerDiagrams,
   title={Auger recombination in GaAs from first principles},
   author={Steiauf, Daniel and Kioupakis, Emmanouil and Van de Walle, Chris G},
@@ -101,6 +108,87 @@
     author = {М.С. Жолудев},
     year = {2013},
     publisher = {IPM RAS}
+}
+
+@article{Novik:2005,
+   hyphenation = {english},
+   author = {Novik, E. G. and Pfeuffer-Jeschke, A. and Jungwirth, T. and 
+Latussek, V. and Becker, C. R. and Landwehr, G. and Buhmann, H. and 
+Molenkamp, L. W.},
+   heading = {Novik, E. G.},
+   volume = {72},
+   journal = {Phys. Rev. B},
+   month = {Jul},
+   numpages = {12},
+   title = {Band structure of semimagnetic Hg$_{1-y}$Mn$_y$Te quantum 
+wells},
+   year = {2005},
+   url = {http://link.aps.org/doi/10.1103/PhysRevB.72.035321},
+   doi = {10.1103/PhysRevB.72.035321},
+   issue = {3},
+   publisher = {American Physical Society},
+   pages = {035321},
+   keywords = {autoref}
+}
+
+@article{Zholudev:PRB:2012,
+   hyphenation={english},
+   title = {Magnetospectroscopy of two-dimensional HgTe-based 
+topological insulators around the critical thickness},
+   author = {Zholudev, M. and Teppe, F. and Orlita, M. and Consejo, C. 
+and Torres, J. and Dyakonova, N. and Czapkiewicz, M. and Wr\'obel, J. 
+and Grabecki, G. and Mikhailov, N. and Dvoretskii, S. and Ikonnikov, A. 
+and Spirin, K. and Aleshkin, V. and Gavrilenko, V. and Knap, W.},
+   heading = {Zholudev, M.},
+   journal = {Phys. Rev. B},
+   volume = {86},
+   issue = {20},
+   pages = {205420},
+   numpages = {9},
+   year = {2012},
+   month = {Nov},
+   doi = {10.1103/PhysRevB.86.205420},
+   url = {http://link.aps.org/doi/10.1103/PhysRevB.86.205420},
+   publisher = {American Physical Society},
+   keywords={own, autoref}
+}
+
+@article{Rumyantsev:PTS:2018,
+   title = {Влияние особенностей зонного спектра на характеристики стимулированного излучения в узкозонных гетероструктурах с квантовыми ямами на основе HgCdTe},
+   author = {Румянцев, В.В. and Куликов, Н.С. and Кадыков, А.М. and Фадеев and М.А., Иконников, А.В. and Казаков, А.С. and Жолудев, М.С. and Алешкин, В.Я. and Уточкин, В.В. and Михайлов, Н.Н. and Дворецкий, С.А. and Морозов, С.В. and Гавриленко, В.И.},
+   heading = {Румянцев, В.В.},
+   journal = {Физика и техника полупроводников},
+   volume = {52},
+   issue = {20},
+   pages = {1263},
+   year = {2018},
+   keywords={own, autoref}
+}
+
+@book{Dierckx,
+  title={Curve and surface fitting with splines},
+  author={Dierckx, Paul},
+  year={1995},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{Rumyantsev:IOP:2018,
+  title={HgCdTe based quantum well heterostructures for long-wavelength lasers operating in 5-15 THz range},
+  author={Rumyantsev, VV and Kulikov, NS and Kadykov, AM and Zholudev, MS and Fadeev, MA and Aleshkin, V Ya and Winnerl, S and Mikhailov, NN and Dvoretskii, SA and Gavrilenko, VI and others},
+  booktitle={Journal of Physics: Conference Series},
+  volume={1092},
+  number={1},
+  pages={012126},
+  year={2018},
+  organization={IOP Publishing}
+}
+
+@inproceedings{Utochkin:PTS:2019,
+  title={Исследование пороговой энергии оже-рекомбинации в волноводных структурах с квантовыми ямами HgTe/Cd0.7Hg0.3Te в области 14 мкм},
+  author={Уточкин, В.В. and Алёшкин, В.Я. and Дубинов, А.А. and Гавриленко, В.И. and Куликов, Н.С. and Фадеев, М.А. and Румянцев, В.В. and Михайлов, Н.Н. and Дворецкий, С.А. and Морозов, С.В.},
+  heading = {Уточкин, В.В.},
+  year={2019},
+  journal = {Физика и техника полупроводников}
 }
 
 
