--- a/sections/measTechnique.tex
+++ b/sections/measTechnique.tex
@@ -1,9 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{center}
-        \chapter{Измерения и методики}
-    \end{center}
+    \chapter{Измерения и методики}
 
     
     \section{Методика исследования фотолюминисценции}
@@ -21,7 +19,7 @@
     требуемом диапазоне $600~nm - 15~\mu m$. На выходе же стояло окно из KRS-5, которое прозрачно
     в диапазоне $600~nm-50~\mu m$.
     
-    Структуры облучались лазерами с длинами волн \ra ... с мощностями \ra ... соответственно.
+    Структуры облучались лазером $CO_2$ с длиной волны $10.6~\mu m$ с мощностью 10 MW в импульсе соответственно.
     При этом лазеры были импульсными или искуственно модулировались механическим способом.
 
     При этом использовался фурье спектрометр Bruker Vertex V80, в режиме пошагового сканирования. 
@@ -32,14 +30,16 @@
     позиционирования.
 
     В качестве приемника использовался болометр производства IRLabs с 
-    высокой чувствительностью в диапазоне \ra ... . Также некоторые измерения были произведены при помощи 
+    высокой чувствительностью в диапазоне $16 - 300 ~\mu m$ . Также некоторые измерения были произведены при помощи 
     полупроводникового детектора на основе MCT (также производства IRLabs), позволяющего  улавливать 
     излучение в диапазоне $\hdots - 16\~\mu m$.
 
     Воизбежание паразитной засветки детекторов излучением накачки (интенсивность которого на много порядков 
     превышало излучение как исследуемого спонтанного, так и вынужденного излучения образцов) использовался набор интерференционных и 
-    \ra ... фильтров, позволяющий эффективно ослаблять излучение в неинтересующем нас диапазоне.
+    полупроводниковых фильтров, позволяющий эффективно ослаблять излучение в неинтересующем нас диапазоне.
     
+    \vspace{0.75cm}
+    \begin{figure}[h]
     \begin{minipage}[h]{\linewidth}
         \centering
         \begin{tikzpicture}
@@ -73,10 +73,12 @@
         \filldraw[fill=lightgray] (5.5, -1) rectangle (7.5, 1);
         \node at (6.5, 1.5) {Fourier spectrometer};
         \end{tikzpicture}
-        
+        \vspace{0.75cm}
+
         \textbf{Геометрия задачи исследования фотолюминисценции}
-        
+        \vspace{1.25cm}
     \end{minipage}
+    \end{figure}
 
     Для снижения влияния ЭМ наводок, а также для эффективного усиления использовались 
     усилители напряжения Standford SR560, включающие в себя регулируемые частотные фильтры 6db, 12db. 
@@ -89,9 +91,9 @@
 
     Основным ПО при обработке спектров являлся Opus 7.0. В частности это позволяет записывать временно-разрещённые спектры,
     а также в существенной мере отфильтровать шумы посредством правильной рбработки интерферограммы.
-
+    \begin{figure}[h]
     \begin{minipage}[h]{\linewidth}
-        \centering
+        \begin{center}
         \begin{tikzpicture}
             \filldraw[fill=lightgray] (0, -2) rectangle (1, -1);
             \draw[->] (1, -1.5) -- (9, -1.5);
@@ -125,9 +127,12 @@
             \node at (14.5, 1) {PC \& Software};
         \end{tikzpicture}
         \vspace{0.75 cm}
+
         \textbf{Принципиальная схема эксперимента фотолюминисценции}
-        \vspace{0.75 cm}
+        \vspace{1.25 cm}
+        \end{center}
     \end{minipage}
+\end{figure}
 
     
     \section{Методика исследования фотопроводимости}
@@ -157,9 +162,10 @@
     Кроме вышеперечисленного оборудования использовался токовый усилитель Standford SR570, который также способен выдавать
     ток смещения. В силу специфики образцов мы можем считать их сопротивление линейным, посему полученный
     в результате измерений, сигнал не нуждается в дополнительной обработке.
-
+    \vspace{0.75cm}
+    \begin{figure}[h]
     \begin{minipage}[h]{\linewidth}
-        \centering
+        \begin{center}
 			\begin{tikzpicture}
 				\filldraw[fill=gray] (2,0) -- (1.5, -0.5) -- (1.5, -2)
 					-- (1.5, -2) arc(0:180:-0.625)
@@ -223,15 +229,43 @@
             A - сосуд Дюара, B - жидкий гелий или азот, C - оптический тракт, D - фурье-спектрометр, 
             E - источник излучения, G - ПК и ПО.
 
-            \vspace{0.75cm}
+            \vspace{1.25cm}
+        \end{center}
         \end{minipage}
+    \end{figure}
 
+    \section{Рассматриваемые образцы}
 
+    Во многом дизайн рассматриваемых гетероструткур обусловлен технологическими особенностями их роста.
+    Все образцы были получены посредством молекулярно "= лучевой эпитаксии в ИФП СО РАН.
+    Обязательным условием возможности создания таких структур является буфер между подложкой 
+    и участком с квантовыми ямами, обеспечивающий согласование приодов решётки кристалла, а также нивелирующий
+    до некоторой степени разность в коэффициентах термического расширения образцов. Также буферный слой играет 
+    роль нижней частью волновода, рассчитанного на длину волны, соответствующую нижнему возбужденному состоянию квантовых ям.
+
+    Сам участок с квантовыми ямами растится в автоматическом режиме, что позволяет с высокой точностью выдерживать
+    требуемый профиль прямоугольных квантовых ям, характерная толщина которых составляет 3-10 nm при ошибке порядка 0.1 nm.
+    Однако подобный режим роста не позволяет обеспечивать требуемую точность концентрации, которая может нарушаться ввиду оседания
+    части напыляемого материала на стенках камеры.
+
+    Также следует отметить влияение количества квантовых ям на возможный уровень фотолюминисценции. В данном случае мы можем расматривать
+    структуры как лазер с квазидвухуровневой средой. Такое рассмотрение возможно в силу сравнения времён накачки и теплового рассеяния:
+    $\tau_p \gg \tau_\varepsilon$. Как известно в таких средах огромный вклад вносят процессы перепоглощения испускаемых фотонов. При таком
+    подходе видно, что КПД устройства будет снижаться при большом количестве КЯ, что обусловлено увеличением эффективного времени жизни инверсии
+    насселенностей и некоторым количеством потерь за счет паразитных безызлучательных механизмов реклмбинации (Оже и ШРХ). Однако в отдельности
+    каждая квантовая яма имеет крайне низкий уровень поглощения излучения накачки. Из этого видно наличие некоего
+    оптимального числа квантовых ям. В текущих образцах количество КЯ варьируется в диапазон 5-10 штук.
+
+    Вторым ключевым элементом конструкции подобных гетероструктур является волновод, который с одной стороны позволяет создать стоячую волну, которая
+    при правильном подборе параметров позволяет локализовать пучности ЭМ поля в точках, имеющих и наибольший квадрат модуля огибающей волновой функции электронов, 
+    что позволяет существенно увеличить матричный элемент перехода с нижнего энергетического урованя на первый возбужденный.
+
+    \section{Экспериментальные данные}
     В ходе работы были проведено множество экспериментов по измерению фотлюминисценции образцов.
     Однако для иллюстрации зависимости порога Оже-процесса и температуры гашения СИ были избранны 
     два образца, рассчитанные на 14 и 18 $\mu m$ длины волн.
 
-    Первым примером будет образец из ещё не вышедше статьи \cite{Utochkin}. Рассматривался образец, содержащий 10 несвязанных
+    Первым примером будет образец из ещё не вышедше статьи \cite{Utochkin:PTS:2019}. Рассматривался образец, содержащий 10 несвязанных
     (имеющих меж собой широкие и "высокие" барьеры) квантовых ям
     состава Hg${}_{0.903}$Cd${}_{0.097}$Te/Cd${}_0.7$Hg${}_{0.3}$Te и толщиной 7.4 $nm$, что соответствует ширине 
     запрещённой зоны около 90 $meV$ ($\lambda \sim 14~\mu m$) при $T = 18 ~K$. Структура не была намеренно легирована; остаточная концентрация 
@@ -241,17 +275,39 @@
     препятствует использованию сколотых граней кристалла в качестве зеркал резонатора, т.к. плоскости сколов образуют
     острый угол с плоскостью КЯ.
 
-    Второй образец использовался в статье \cite{Fadeev} и представляет собой 10 КЯ состава Cd0.1Hg0.9Te/Cd0.65Hg0.35Te
+    Второй образец использовался в статье \cite{Utochkin:PTS:2019} и представляет собой 10 КЯ состава Cd0.1Hg0.9Te/Cd0.65Hg0.35Te
     с толщиной ям 8.7 $nm$.
     Этот образец имеет ширину запрещённой зоны порядка 70 $meV$ ($\lambda \sim 18~\mu m$) и позволяет наблюдать стимулированное 
-    излучение на этой длине волны в диапазоне  20-40 K. В остальном эта структура аналогична предыдущей.
+    излучение на этой длине волны в диапазоне  20-50 K. В остальном эта структура аналогична предыдущей.
 
     Ширина запрещённой зоны была подтверждена методом фотопроводимости. Это позволило удостовериться в правильности последующих 
     расчетов и подтвердить наблюдение именно межзонной фотолюминисценции.
 
     В ходе измерения были получены следующие спектры сфотолюминисценции:
 
-    [спектры]
+    \begin{figure}[h]
+        \vspace{0.75cm}
+        \begin{minipage}[h]{\linewidth}
+            \begin{center}
+                \includegraphics[width=0.75\linewidth]{./images/spectre_14um.png}
+    
+                \vspace{0.75cm}
+                \textbf{Спектры стимулированного излучения для структуры, 
+                    рассчитаной на 14 $\mu m$.}
+                \vspace{0.75cm}
+            \end{center}
+        \end{minipage}
+        \begin{minipage}[h]{\linewidth}
+            \begin{center}
+                \includegraphics[width=0.75\linewidth]{./images/spectre_18um.png}
+    
+                \vspace{0.75cm}
+                \textbf{Спектры стимулированного излучения для структуры, 
+                    рассчитаной на 18 $\mu m$.}
+                \vspace{0.75cm}
+            \end{center}
+        \end{minipage}
+    \end{figure}
 
     Как можно видеть, при изменении температуры происходит сдвиг излучения в сболее коротковолновую область, а также снижение 
     интенсивности стимулированного излучения. Отчасти снижение структуры может быть объсянено тем, что длина волны становится 
@@ -265,5 +321,4 @@
 
     Отсюда возникает задача сравнения порога Оже-рекомбинации и тепловой энергии частиц, которые смогут характеризовать это 
     снижение интенсивности и температуру гашения СИ в целом.
-    \newpage
 \end{document}
