--- a/sections/myComputations.tex
+++ b/sections/myComputations.tex
@@ -1,9 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{center}
-        \chapter{Рассчет минимальной энергии Оже-процесса}
-    \end{center}
+    \chapter{Рассчет минимальной энергии Оже-процесса}
     \section{Общие соотношения}
     Одним из способов увеличения интенсивности стимулированного излучения является повышение разности насселенностей,
     что в случае подобных структур приводит к задаче увеличения времени жизни носителей заряда,
@@ -86,7 +84,8 @@
         \end{equation}
         Это можно интерперетировать, как необходимость равенства групповых скоростей квазичастиц.
 
-        Теперь рассмотрим ситуацию изотропного дисперсионного соотношения $\varepsilon(\abs{\vec k})$,
+        Теперь рассмотрим ситуацию изотропного дисперсионного соотношения $\varepsilon(\abs{\vec k})$
+        и процесса типа CCHC,
         очевидно в таком случае для минимизации энергии требуется коллинеарность всех импульсов. 
         В таком случае можно достаточно просто численно определить пороговую энергию Оже процесса, что и было сделано.
 
@@ -106,15 +105,19 @@
         неплохо аппроксимированны квадратичной в диапазоне $\frac{p^2}{2m} \leq T$ (что подразумевает низкую населенность состояний
         с более высокой энергией).
 
+        \section{Методики рассчетов}
         Теперь рассмотрим случай уже более сложных дисперсионных соотношений.
         Для этого входные данные считываются и по ним строится интерполяция,
         в виде сплайна третьего порядка. В дальнейшем производится оптимизация функции с условием:
         \begin{equation}
             \begin{array}{l}
-                \mathcal{X}  = \varepsilon_f(k_1 + k_2 + k_h) - E_g;\\
+                \mathcal{X}  = \varepsilon_f(k_1 + k_2 + k_h) - \alpha \cdot E_g;\\
                 \varepsilon_1(k_1) + \varepsilon_2(k_2) + \varepsilon_h(k_h) - \varepsilon_f(k_1 + k_2 + k_h);
             \end{array}
         \end{equation}
+
+        Здесь $\alpha$ равняется 1 для процесса CCHC и 2 для HHCH, в случае, если производится 
+        удобный для рассчетов сдвиг $E_c = 0,~E_v = -E_g$. И имеет смысл 
 
         Также стоит отметить, что зачастую удобно использовать сплайны Акимы \cite{AkimaSplines}, поскольку они позволяют существенно уменьшить
         численные артефакты, связанные с переколебаниями сплайна. Это позволяет значительно увеличить точность вычислейний, а также убрать ложные
