--- a/sections/titlePage.tex
+++ b/sections/titlePage.tex
@@ -1,16 +1,87 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
+\begin{titlepage}
     \begin{center}
-        МИНИСТЕРСТВО ОБРАЗОВАНИЯ И НАУКИ РОССИЙСКОЙ ФЕДЕРАЦИИ
-
-        ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ АВТОНОМНОЕ
-
-        ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ ВЫСШЕГО ОБРАЗОВАНИЯ
-        
-        "Национальный исследовательский Нижегородский государственный университет им. Н. И. Лобачевского"
+    \textbf{МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ}
+    
+    \textbf{Федеральное государственное автономное образовательное учреждение высшего образования «Национальный исследовательский Нижегородский государственный университет им. Н.И. Лобачевского» (ННГУ)}
+    
+    \vspace{0.1cm}
+    Высшая школа общей и прикладной физики
+    
     \end{center}
     
+    
+    \begin{center}
+    \Large{\bf{Исследование пороговой энергии оже-рекомбинации в волноводных структурах с квантовыми ямами HgСdTe в области 14 и 18 мкм}}
+    \end{center}
+    
+    \begin{flushright}
+    Выпускная квалификационная работа
+    
+    студента 4 курса бакалавриата  ВШОПФ по
+    
+    направлению подготовки 03.03.02 Физика,
+    
+    профиль – фундаментальная физика,
+    
+    Куликова Никиты Сергеевича
+    
+    % \vspace{6\mytextsize}
+    \vspace{0.1 cm}
+    \underline{Научный руководитель:}
+    
+    Заведующий лабораторией ИФМ РАН,
+    
+    Кандидат физико-математических наук
+    
+    \begin{minipage}[t][0.1 cm][t]{2in}
+    %  \begin{minipage}[t][2\mytextsize][t]{2in} % размер minipage равен удвоенному размеру основного шрифта
+      \underline{\hspace{2in}}\\ % линия подчёркивания на два дюйма
+      \centering
+    %   \vspace{\mytextsize} % отступ minipage для выравнивания линии подчёркивания с базовой линией остального текста
+    \end{minipage}~С.В. Морозов
+    
+    % \vspace{6\mytextsize}
+    \vspace{0.1 cm}
+     \underline{Рецензент:}
+    
+    Старший научный сотрудник ИФМ РАН,
 
-    \newpage
+    Кандидат физико-математических наук
+    
+    \begin{minipage}[t][0.1cm][t]{2in} % размер minipage равен удвоенному размеру основного шрифта
+    
+    % \begin{minipage}[t][2\mytextsize][t]{2in} % размер minipage равен удвоенному размеру основного шрифта
+      \underline{\hspace{2in}}\\ % линия подчёркивания на два дюйма
+      \centering
+      \vspace{0.1 cm} % отступ minipage для выравнивания линии подчёркивания с базовой линией остального текста
+    \end{minipage}~Р.Х. Жукавин
+    
+    \vspace{0.1 cm}
+    
+    \underline{Декан ВШОПФ:}
+    
+    Кандидат физико-математических наук
+    
+    
+    
+    \begin{minipage}[t][0.1 cm][t]{2in} % размер minipage равен удвоенному размеру основного шрифта
+      \underline{\hspace{2in}}\\ % линия подчёркивания на два дюйма
+      \centering
+      \vspace{0.1 cm} % отступ minipage для выравнивания линии подчёркивания с базовой линией остального текста
+    \end{minipage}~Е. Д. Господчиков
+    
+    \end{flushright}
+    
+    \vspace{4.8cm}
+    
+    \begin{center}
+    Нижний Новгород
+    
+    2019 г.
+    \end{center}
+    
+    \end{titlepage}
 \end{document}
