--- a/bibliography.bib
+++ b/bibliography.bib
@@ -191,6 +191,17 @@ and Spirin, K. and Aleshkin, V. and Gavrilenko, V. and Knap, W.},
   journal = {Физика и техника полупроводников}
 }
 
+@article{Asryan:IOP:2005,
+  title={Spontaneous radiative recombination and nonradiative Auger recombination in quantum-confined heterostructures},
+  author={Asryan, Levon V},
+  journal={Quantum Electronics},
+  volume={35},
+  number={12},
+  pages={1117},
+  year={2005},
+  publisher={IOP Publishing}
+}
+
 
 
 
