--- a/sections/augerThresholdCalculation.tex
+++ b/sections/augerThresholdCalculation.tex
@@ -68,7 +68,7 @@
     что $E_v = - E_g$.
 
     Тогда нам нужно будет найти минимальную энергию конечной частицы, учитывая
-    однако законы сохранения (закон созранения импульса уже учтён неявно), 
+    однако законы сохранения (закон сохранения импульса уже учтён неявно), 
     т.е. нам потребуется вычислить: 
 
     \begin{equation}
@@ -153,7 +153,7 @@
         рассматриваемую физическую задачу. В данной работе рассматривались квантовые ямы HgCdTe/CdHgTe, выращенные 
         на плоскости [013] на буффере CdTe. Такое направление было выбрано в силу технологических причин (более
         высокая скорость роста), буффер же отвечает за постоянную решётки и напряжения в кристалле,
-        которые могуть существенно повлиять на вид дисперсионного соотношения.
+        которые могут существенно повлиять на вид дисперсионного соотношения.
 
         Сам расчёт дисперсионного соотношения осуществлялся по методу огибающих функций
         в приближении Бёрта-Формана на основе гамильтониана Кейна 8x8 \cite{Novik:2005}. При расчётах
@@ -272,8 +272,8 @@
         \end{figure}
         
         Аналогично поступим и со структурой расчитаной для излучения на длине волны  
-        $18~\mu m$. Результаты расчётов спектра электронов и дырок для двух случаев приведены на рисунке ниже. В первом случае (рис. а) расчёт проведён 
-        для экспериментально исследованной Cd${}_{0.1}$Hg${}_{0.9}$Te/Cd${}_{0.65}$Hg${}_{0.35}$Te КЯ толщиной 8.7 nm, во втором случае (рис. б) расчёт проведён для 
+        $18~\mu m$. Результаты расчётов спектра электронов и дырок для двух случаев приведены на рисунке ниже. В первом случае (рис. в) расчёт проведён 
+        для экспериментально исследованной Cd${}_{0.1}$Hg${}_{0.9}$Te/Cd${}_{0.65}$Hg${}_{0.35}$Te КЯ толщиной 8.7 nm, во втором случае (рис. г) расчёт проведён для 
         HgTe/Cd${}_{0.65}$Hg${}_{0.35}$Te КЯ толщиной 4.4 nm.
         
         \begin{figure}[h!]
@@ -281,7 +281,7 @@
                 \begin{center}
                     \includegraphics[width=1.\linewidth]{./images/18u_impure_40K.pdf}
     
-                    \textbf{Рис. а: Образец с "грязными" КЯ.} Пороговая энергия 
+                    \textbf{Рис. в: Образец с "грязными" КЯ.} Пороговая энергия 
                         $\varepsilon_{th} \approx 15~meV$.
                 \end{center}
             \end{minipage}
@@ -290,14 +290,14 @@
                 \begin{center}
                     \includegraphics[width=1.\linewidth]{./images/18u_pure_40K.pdf}
     
-                    \textbf{Рис. б: Образец с "чистыми" КЯ.} Пороговая энергия 
+                    \textbf{Рис. г: Образец с "чистыми" КЯ.} Пороговая энергия 
                         $\varepsilon_{th} \approx 37.3~meV$.
                 \end{center}
             \end{minipage}
         \end{figure}
 
         Из рисунка a видно, что для первого случая в валентных подзонах имеются дополнительные максимумы, располагающиеся ниже потолка валентной 
-        зоны на 7 meV. В HgTe яме, окруженной Cd${}_{0.65}$Hg${}_{0.35}$Te, эти экстремумы практически отсутствуют (рис. б). Как было показано ниже
+        зоны на 7 meV. В HgTe яме, окруженной Cd${}_{0.65}$Hg${}_{0.35}$Te, эти экстремумы практически отсутствуют (рис. г). Как было показано ниже
         вид дисперсионного соотношения может существенно влиять на порог оже-процессов.
         \newpage
 
