--- a/sections/measTechnique.tex
+++ b/sections/measTechnique.tex
@@ -275,8 +275,8 @@
     препятствует использованию сколотых граней кристалла в качестве зеркал резонатора, т.к. плоскости сколов образуют
     острый угол с плоскостью КЯ.
 
-    Второй образец использовался в статье \cite{Utochkin:PTS:2019} и представляет собой 10 КЯ состава Cd0.1Hg0.9Te/Cd0.65Hg0.35Te
-    с толщиной ям 8.7 $nm$.
+    Второй образец представляет собой 10 КЯ состава Cd${}_{0.1}$Hg${}_{0.9}$Te/Cd${}_{0.65}$Hg${}_{0.35}$Te
+    с толщиной ям порядка 8.7 $nm$.
     Этот образец имеет ширину запрещённой зоны порядка 70 $meV$ ($\lambda \sim 18~\mu m$) и позволяет наблюдать стимулированное 
     излучение на этой длине волны в диапазоне  20-50 K. В остальном эта структура аналогична предыдущей.
 
@@ -289,8 +289,9 @@
         \vspace{0.75cm}
         \begin{minipage}[h]{\linewidth}
             \begin{center}
-                \includegraphics[width=0.75\linewidth]{./images/spectre_14um.png}
-    
+                %\includegraphics[width=0.75\linewidth]{./images/spectre_14um.png}
+                \includegraphics[width=0.75\linewidth]{./images/new_f_sp_14um.pdf}
+
                 \vspace{0.75cm}
                 \textbf{Спектры стимулированного излучения для структуры, 
                     рассчитаной на 14 $\mu m$.}
@@ -299,10 +300,11 @@
         \end{minipage}
         \begin{minipage}[h]{\linewidth}
             \begin{center}
-                \includegraphics[width=0.75\linewidth]{./images/spectre_18um.png}
-    
+                %\includegraphics[width=0.75\linewidth]{./images/spectre_18um.png}
+                \includegraphics[width=0.75\linewidth]{./images/new_f_sp_18um.pdf}
+
                 \vspace{0.75cm}
-                \textbf{Спектры стимулированного излучения для структуры, 
+                \textbf{Спектр стимулированного излучения для структуры, 
                     рассчитаной на 18 $\mu m$.}
                 \vspace{0.75cm}
             \end{center}
