--- a/sections/reIntro.tex
+++ b/sections/reIntro.tex
@@ -85,14 +85,16 @@
     А сам коэффициент Эйнштейна для спонтанного излучения 
     ($E_g$ - ширина запрещённой зоны; $m_0,~m_h,~m_c$ - масса свободного электрона,
     эффективная масса электрона и дырки; $\Delta$ - величина спин-орбитального 
-    расщепления; $P^2$ - коэффициент Кейна): 
+    расщепления; $P^2$ - коэффициент Кейна) \cite{Asryan:IOP:2005}: 
 
-    \begin{eqnarray*}
-        A_{21} \propto \frac{(\varepsilon_g + \varepsilon_n + \varepsilon_p) P^2}
-            {\sqrt{(m_c + m_h)T}} n_n n_p \sim n_n n_p \sqrt{\frac{\varepsilon_g}{T}} ;\\
-        P^2 \propto \frac{m_c + m_0}{m_c m_0} \frac{\varepsilon_g(\varepsilon_g + \Delta)}
-            {\varepsilon_g + 2 \Delta / 3} \propto \frac{m_0}{m_0 m_c} \frac{\varepsilon_g \Delta}{\Delta} \sim \text{const};
-    \end{eqnarray*} 
+    \begin{equation*}
+        \begin{array}{l}
+            A_{21} \propto \frac{(\varepsilon_g + \varepsilon_n + \varepsilon_p) P^2}
+                {\sqrt{(m_c + m_h)T}} n_n n_p \sim n_n n_p \sqrt{\frac{\varepsilon_g}{T}} ;\\
+            P^2 \propto \frac{m_c + m_0}{m_c m_0} \frac{\varepsilon_g(\varepsilon_g + \Delta)}
+                {\varepsilon_g + 2 \Delta / 3} \propto \frac{m_0}{m_0 m_c} \frac{\varepsilon_g \Delta}{\Delta} \sim \text{const};
+        \end{array}
+    \end{equation*} 
 
     Откуда следует вывод о том, что вероятность излучательной рекомбинации растёт
     с ростом ширины запрещённой зоны. В нашем же случаеособый интерес представляют
